# tasks_app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  init.sql  lv_tasks.h  main.cpp
client/: app.json  package-lock.json  package.json
client/components/: Auth.js  ListItem.js  TaskItem.js
client/constants/: General.js
client/navigation/: AppNavigator.js  AuthNavigator.js  MainTabNavigator.js
client/screens/: AuthLoadingScreen.js  CompletedScreen.js  LoginScreen.js  ProfileScreen.js  RegisterScreen.js  TasksScreen.js
src/: main.cpp
tasks/: pom.xml
tasks/src/main/java/com/service/tasks/: TasksApplication.java
tasks/src/main/java/com/service/tasks/controller/: UserController.java
tasks/src/main/java/com/service/tasks/controllers/: TaskController.java  UserController.java
tasks/src/main/java/com/service/tasks/model/: User.java
tasks/src/main/java/com/service/tasks/models/: Base.java  Task.java  User.java
tasks/src/main/java/com/service/tasks/repositories/: TaskRepository.java  UserRepository.java
tasks/src/main/java/com/service/tasks/security/: AuthenticationFilter.java  AuthorizationFilter.java  JWTAuthenticationFilter.java  JWTAuthorizationFilter.java  SecurityConstants.java  WebConfig.java  WebSecurity.java
tasks/src/main/java/com/service/tasks/services/: UserService.java
tasks/src/main/resources/: application.properties
tasks/src/test/java/com/service/tasks/: TaskControllerTests.java  TasksApplicationTests.java  UserControllerTests.java
tasks/src/test/java/com/service/tasks/controllers/: TaskControllerTest.java  (+1 more)
(+1 files in other folders)
